Bug 1716858 - Don't throw an error when assigning a UID to a card in a read-only directory. r=mkmelin Just return NS_OK instead of saving. The card object will have this UID until it's destroyed, but getting the same card will have a different UID next time. I think this situation is only for LDAP anyway, so that doesn't matter at all.

I'm not sure why we even attempt to get the directory and save the UID, but I'm leaving it behind in case there are unintended consequences.

Differential Revision: https://phabricator.services.mozilla.com/D118119

--HG--
extra : rebase_source : 9ed90d08f70dcd105670eb332023a46c508c20d2